--- a/css/styles.css
+++ b/css/styles.css
@@ -130,8 +130,17 @@ h2{
 	float: left;
 	margin-left: 80px;
 	margin-top: 30px;
-	width: 900px;
+	/*width: 900px;*/
+	width: 45%;
+	min-width: 500px;
+	position:absolute;
+	left: 350px;
+	top: 50px;
 	text-align: center;
+}
+
+.order{
+	width: 100%;
 }
 
 dl{
